cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

project(cpp_chat)

set(SOURCE_LIB ClientDirector.cpp)
add_library(ClientDirector STATIC ${SOURCE_LIB})
set(SOURCE_LIB ServerDirector.cpp)
add_library(ServerDirector STATIC ${SOURCE_LIB})
set(SOURCE_LIB MessageStorage.cpp)
add_library(MessageStorage STATIC ${SOURCE_LIB})
set(SOURCE_LIB MessageThread.cpp)
add_library(MessageThread STATIC ${SOURCE_LIB})
set(SOURCE_LIB UserList.cpp)
add_library(UserList STATIC ${SOURCE_LIB})
set(SOURCE_LIB JsonWrapper.cpp)
add_library(JsonWrapper STATIC ${SOURCE_LIB})
set(SOURCE_LIB SocketClasses/ClientSocket.cpp)
add_library(ClientSocket STATIC ${SOURCE_LIB})
set(SOURCE_LIB SocketClasses/ServerSocket.cpp)
add_library(ServerSocket STATIC ${SOURCE_LIB})

add_executable(main main.cpp)
add_executable(client client.cpp)

target_link_libraries(main ServerDirector)
target_link_libraries(main MessageStorage)
target_link_libraries(main MessageThread)
target_link_libraries(main UserList)
target_link_libraries(main JsonWrapper)
target_link_libraries(main ServerSocket)

target_link_libraries(client ClientDirector)
target_link_libraries(client ClientSocket)
