cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

project(cpp_chat)

set(SOURCE_LIB ClientDirector/ClientDirector.cpp)
add_library(ClientDirector STATIC ${SOURCE_LIB})
set(SOURCE_LIB ServerDirector/ServerDirector.cpp)
add_library(ServerDirector STATIC ${SOURCE_LIB})
set(SOURCE_LIB MessageStorage/MessageStorage.cpp)
add_library(MessageStorage STATIC ${SOURCE_LIB})
set(SOURCE_LIB MessageThread/MessageThread.cpp)
add_library(MessageThread STATIC ${SOURCE_LIB})
set(SOURCE_LIB UserList/UserList.cpp)
add_library(UserList STATIC ${SOURCE_LIB})
set(SOURCE_LIB JsonWrapper/JsonWrapper.cpp)
add_library(JsonWrapper STATIC ${SOURCE_LIB})
set(SOURCE_LIB SocketClasses/ClientSocket.cpp)
add_library(ClientSocket STATIC ${SOURCE_LIB})
set(SOURCE_LIB SocketClasses/ServerSocket.cpp)
add_library(ServerSocket STATIC ${SOURCE_LIB})

add_executable(server server.cpp)
add_executable(client client.cpp)

target_link_libraries(server ServerDirector)
target_link_libraries(server MessageStorage)
target_link_libraries(server MessageThread)
target_link_libraries(server UserList)
target_link_libraries(server JsonWrapper)
target_link_libraries(server ServerSocket)

target_link_libraries(client ClientDirector)
target_link_libraries(client ClientSocket)
